Implement delete invoice

--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Components/Remove.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Components/Remove.razor
@@ -2,7 +2,7 @@
 
 <MudDialog>
     <DialogContent>
-        <MudText>آیا از حذف فاکتور @InvoiceNumber مطمئن هستید؟</MudText>
+        <MudText>آیا از حذف فاکتور شماره @InvoiceNumber مطمئن هستید؟</MudText>
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">لغو</MudButton>
