--- a/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
@@ -1,4 +1,5 @@
 ﻿@attribute [Route(ClientRoutes.Home.Index)]
+@using GoldEx.Client.Pages.Invoices.Components
 @inherits GoldExComponentBase
 
 <PageTitle>صفحه اصلی</PageTitle>
@@ -47,7 +48,9 @@
                 <MudTabPanel Text="اسناد حسابداری" Icon="@Icons.Material.Filled.DocumentScanner">
                     <TransactionsList Class="mt-2" Elevation="4" />
                 </MudTabPanel>
-                <MudTabPanel Text="فاکتورهای من"></MudTabPanel>
+                <MudTabPanel Text="فاکتورهای من" Icon="@Icons.Material.Filled.AutoStories">
+                    <InvoicesList Class="mt-2" Elevation="4" />
+                </MudTabPanel>
                 <MudTabPanel Text="گزارش گیری"></MudTabPanel>
                 <MudTabPanel Text="اجناس فروخته شده"></MudTabPanel>
                 <MudTabPanel Text="لیست بدهی ها"></MudTabPanel>
