Add sample viewer and designer

--- a/src/App/Client/GoldEx.Client/_Imports.razor
+++ b/src/App/Client/GoldEx.Client/_Imports.razor
@@ -24,4 +24,5 @@
 @using GoldEx.Client.Pages.Customers.Components
 @using GoldEx.Client.Pages.Customers.ViewModels
 @using GoldEx.Client.Pages.Transactions.Components
+@using DevExpress.Blazor.Reporting
 
