--- a/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsNavMenu.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsNavMenu.razor
@@ -4,4 +4,5 @@
     <MudNavLink Href="@ClientRoutes.Settings.PriceSettings" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.EuroSymbol">مدیریت نمادها</MudNavLink>
     <MudNavLink Href="@ClientRoutes.Settings.PriceUnits" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CurrencyExchange">مدیریت واحدهای ارزی</MudNavLink>
     <MudNavLink Href="@ClientRoutes.Settings.PaymentMethods" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Payment">مدیریت روش های پرداخت</MudNavLink>
+    <MudNavLink Href="@ClientRoutes.Settings.ReportsList" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.DesignServices">طراحی گزارش ها</MudNavLink>
 </MudNavMenu>
