--- a/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
@@ -32,24 +32,24 @@
     
     <MudTabs Elevation="24" Color="Color.Transparent" Centered="true">
         <MudTabPanel Text="قیمت ارز، طلا و سکه" Icon="@Icons.Material.Filled.AttachMoney">
-            <PriceBoard Class="mt-2" Elevation="24" />
+            <PriceBoard Class="mt-5" Elevation="24" />
         </MudTabPanel>
         <MudTabPanel Text="محاسبه گر" Icon="@Icons.Material.Outlined.Calculate">
-            <Calculator />
+            <Calculator Class="mt-5" Elevation="24" />
         </MudTabPanel>
         <AuthorizeView>
             <Authorized>
                 <MudTabPanel Text="اجناس من" Icon="@Icons.Material.Filled.Warehouse">
-                    <ProductsList Class="mt-2" Elevation="24" />
+                    <ProductsList Class="mt-5" Elevation="24" />
                 </MudTabPanel>
                 <MudTabPanel Text="مشتریان" Icon="@Icons.Material.Filled.PeopleAlt">
-                    <CustomersList Class="mt-2" Elevation="24" />
+                    <CustomersList Class="mt-5" Elevation="24" />
                 </MudTabPanel>
                 <MudTabPanel Text="اسناد حسابداری" Icon="@Icons.Material.Filled.DocumentScanner">
-                    <TransactionsList Class="mt-2" Elevation="24" />
+                    <TransactionsList Class="mt-5" Elevation="24" />
                 </MudTabPanel>
                 <MudTabPanel Text="فاکتورهای من" Icon="@Icons.Material.Filled.AutoStories">
-                    <InvoicesList Class="mt-2" Elevation="24" />
+                    <InvoicesList Class="mt-5" Elevation="24" />
                 </MudTabPanel>
                 <MudTabPanel Text="گزارش گیری"></MudTabPanel>
                 <MudTabPanel Text="اجناس فروخته شده"></MudTabPanel>
