--- a/src/App/Client/GoldEx.Client/Pages/Settings/ReportDesigner.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/ReportDesigner.razor
@@ -10,7 +10,7 @@
 <DxWasmReportDesigner ReportName="@Name" Height="700px" Width="100%" DevelopmentMode=true>
     <DxWasmReportDesignerRequestOptions GetDesignerModelAction="DXXRD/GetReportDesignerModel">
     </DxWasmReportDesignerRequestOptions>
-    <DxReportDesignerModelSettings AllowMDI=true>
+    <DxReportDesignerModelSettings AllowMDI=true RightToLeft="true">
         <DxReportDesignerWizardSettings UseFullscreenWizard=true/>
     </DxReportDesignerModelSettings>
 </DxWasmReportDesigner>
