Add report parameters

--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Viewer.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Viewer.razor
@@ -12,12 +12,12 @@
         </SeparatorTemplate>
     </MudBreadcrumbs>
 
-    <DxWasmDocumentViewer ReportName="@_reportUrl" Height="600px" Width="100%" RightToLeft="true">
+    <DxWasmDocumentViewer ReportName="@_reportUrl" Height="600px" Width="100%">
         <DxDocumentViewerExportSettings UseSameTab=true>
         </DxDocumentViewerExportSettings>
         <DxWasmDocumentViewerRequestOptions InvokeAction="DXXRDV">
         </DxWasmDocumentViewerRequestOptions>
-        <DxReportDesignerModelSettings AllowMDI=true RightToLeft="true">
+        <DxReportDesignerModelSettings AllowMDI=true>
             <DxReportDesignerWizardSettings UseFullscreenWizard=true />
         </DxReportDesignerModelSettings>
     </DxWasmDocumentViewer>
