Add initial zoom

--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Viewer.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Viewer.razor
@@ -20,6 +20,8 @@
         <DxReportDesignerModelSettings AllowMDI=true>
             <DxReportDesignerWizardSettings UseFullscreenWizard=true />
         </DxReportDesignerModelSettings>
+        <DxDocumentViewerCallbacks BeforeRender="reportingCustomization.onBeforeRender" />
     </DxWasmDocumentViewer>
-
 </MudContainer>
+
+<script src="/js/reporting-customization.js"></script>
